@@ -1,20 +1,24 @@
 package com.sigmundgranaas.forgero.core.resource.data;
 
+import com.sigmundgranaas.forgero.core.property.PropertyContainer;
 import com.sigmundgranaas.forgero.core.resource.data.factory.PropertyBuilder;
 import com.sigmundgranaas.forgero.core.resource.data.v2.data.ConstructData;
 import com.sigmundgranaas.forgero.core.resource.data.v2.data.DataResource;
 import com.sigmundgranaas.forgero.core.resource.data.v2.data.IngredientData;
-import com.sigmundgranaas.forgero.core.state.Composite;
 import com.sigmundgranaas.forgero.core.state.LeveledState;
 import com.sigmundgranaas.forgero.core.state.Slot;
 import com.sigmundgranaas.forgero.core.state.State;
-import com.sigmundgranaas.forgero.core.state.slot.EmptySlot;
+import com.sigmundgranaas.forgero.core.state.composite.Construct;
+import com.sigmundgranaas.forgero.core.state.composite.StaticComposite;
+import com.sigmundgranaas.forgero.core.state.upgrade.slot.EmptySlot;
+import com.sigmundgranaas.forgero.core.state.upgrade.slot.SlotContainer;
 import com.sigmundgranaas.forgero.core.type.MutableTypeNode;
 import com.sigmundgranaas.forgero.core.type.Type;
 import com.sigmundgranaas.forgero.core.type.TypeTree;
 import com.sigmundgranaas.forgero.core.util.Identifiers;
 
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class StateConverter implements DataConverter<State> {
@@ -55,19 +59,12 @@ public class StateConverter implements DataConverter<State> {
 
     private Optional<State> createComposite(DataResource resource) {
         if (resource.construct().isPresent()) {
-            var builder = Composite.builder(createSlots(resource.construct().get()));
-            builder.type(tree.type(resource.type()));
-            builder.nameSpace(resource.nameSpace());
-            resource.construct()
-                    .map(ConstructData::components)
-                    .orElse(Collections.emptyList())
-                    .stream()
-                    .map(IngredientData::id)
-                    .map(nameMapping::get)
-                    .map(states::get)
-                    .filter(Objects::nonNull)
-                    .forEach(builder::addIngredient);
-            var state = builder.build();
+            State state;
+            if (resource.construct().get().components().size() > 0) {
+                state = buildConstruct(resource);
+            } else {
+                state = buildStaticComposite(resource);
+            }
             states.put(state.identifier(), state);
             nameMapping.put(resource.identifier(), state.identifier());
             return Optional.of(state);
@@ -75,9 +72,40 @@ public class StateConverter implements DataConverter<State> {
         return Optional.empty();
     }
 
-    private List<? extends Slot> createSlots(ConstructData data) {
+    private State buildConstruct(DataResource resource) {
+        var builder = Construct.builder(createSlots(resource.construct().get()));
+        builder.type(tree.type(resource.type()));
+        builder.nameSpace(resource.nameSpace());
+        //builder.name(resource.name());
+        var ingredients = resource.construct()
+                .map(ConstructData::components)
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(IngredientData::id)
+                .map(nameMapping::get)
+                .map(states::get)
+                .filter(Objects::nonNull).toList();
+
+        ingredients.forEach(builder::addIngredient);
+        return builder.build();
+    }
+
+    private State buildStaticComposite(DataResource resource) {
+        var namespace = resource.nameSpace();
+        var name = resource.name();
+        var type = tree.type(resource.type());
+        var properties = resource.properties()
+                .map(PropertyBuilder::createPropertyListFromPOJO)
+                .map(PropertyContainer::of)
+                .orElse(PropertyContainer.of(Collections.emptyList()));
+
+        var slotContainer = new SlotContainer(resource.construct().map(this::createSlots).orElse(new ArrayList<>()));
+        return new StaticComposite(slotContainer, name, namespace, type, properties);
+    }
+
+    private List<Slot> createSlots(ConstructData data) {
         return IntStream.range(0, data.slots().size())
-                .mapToObj(index -> new EmptySlot(index, tree.find(data.slots().get(index).type()).map(MutableTypeNode::type).orElse(Type.of(data.slots().get(index).type())), data.slots().get(index).description(), Set.copyOf(data.slots().get(index).category()))).toList();
+                .mapToObj(index -> new EmptySlot(index, tree.find(data.slots().get(index).type()).map(MutableTypeNode::type).orElse(Type.of(data.slots().get(index).type())), data.slots().get(index).description(), Set.copyOf(data.slots().get(index).category()))).collect(Collectors.toList());
     }
 
     private Optional<State> createState(DataResource resource) {
